# caspl

Barak/: 2c.c  calc.s  task1.s  task2.s  task2c  task2c.c  task3.c
Barak/C/: sstart.s  task1.s
ass0/: myasm.s  myasmm.s  myexe.out
ass1/part1/: task1.s
ass1/part2/: main1.c  main2.c  makefile  task2backup.s
ass1/toSubmit/: main1.c  main2.c  task1.s  task2.s
ass3/: ass3.s  lifeG.c
lab complention/lab2-task3/: main  task3.c
lab complention/lab4-task2c/: ae.txt  main.c  task0  te.txt
lab5/Assignment3/: ass3  ass3.s  lifeG.c  makefile  makefile~
lab5/task0/: main  main.c
lab5/task1a/: main  main.c
lab5/task1b/: main  main.c  t.txt
lab5/task1d/: main  main.c
lab5/task1e/: LineParser.h  main  main.c
lab5/task2/: LineParser.h  main  main.c  tt.txt
lab6 ayelet/task1/: makefile  task1.c
lab6 ayelet/task2/: makefile  task2.c
lab6 ayelet/task3/: makefile
lab6 ayelet/task4a/: makefile
lab6 ayelet/task4b/: makefile  task4b.c
lab6/task0/: makefile  mypipe  mypipe.c
lab6/task1/: main
lab6/task2/: mypipe
lab6/task3/: mypipe  mypipe.c
lab6/task4a/: main  main.c  makefile
lab6/task4b/: aa  bb  f2  history.c  (+4 more)
lab8/: CMakeLists.txt
lab8/task0/: main  main.c  makefile
lab8/task1/: main  main.c
lab8/task2/: main  main.c
lab8/task3/: main  main.c
ppl/: .~lock.ex1-1.docx#  ex1-1.docx
task0/: ayelet  makefile  myecho  myecho.c
task1/: 2  2.c  a1  a1.c  a2  a2.c  a3  a3.c  bla.txt  ja  k
task2/: add.c  main  makefile
task3/: bubblesort.c  main  main2.c  makefile  task1a.c  task1b.c  task3
unknown/: count-words.c  main  makefile
(+180 files in other folders)
